exports[`prefer-add-event-listener > invalid(1): foo.onclick = () => {} 1`] = `

  1 | foo.onclick = () => {}

`;

exports[`prefer-add-event-listener > invalid(1): foo.onclick = () => {} 2`] = `

Message:
> 1 | foo.onclick = () => {}
    |     ^^^^^^^ Prefer \`addEventListener\` over \`onclick\`.

Output:
  1 | foo.addEventListener('click', () => {})

`;

exports[`prefer-add-event-listener > invalid(10): window.onbeforeunload = null 1`] = `

  1 | window.onbeforeunload = null

`;

exports[`prefer-add-event-listener > invalid(10): window.onbeforeunload = null 2`] = `

Message:
> 1 | window.onbeforeunload = null
    |        ^^^^^^^^^^^^^^ Prefer \`removeEventListener\` over \`onbeforeunload\`.

`;

exports[`prefer-add-event-listener > invalid(11): window.onbeforeunload = undefined 1`] = `

  1 | window.onbeforeunload = undefined

`;

exports[`prefer-add-event-listener > invalid(11): window.onbeforeunload = undefined 2`] = `

Message:
> 1 | window.onbeforeunload = undefined
    |        ^^^^^^^^^^^^^^ Prefer \`removeEventListener\` over \`onbeforeunload\`.

`;

exports[`prefer-add-event-listener > invalid(12): window.onbeforeunload = foo 1`] = `

  1 | window.onbeforeunload = foo

`;

exports[`prefer-add-event-listener > invalid(12): window.onbeforeunload = foo 2`] = `

Message:
> 1 | window.onbeforeunload = foo
    |        ^^^^^^^^^^^^^^ Prefer \`addEventListener\` over \`onbeforeunload\`. Use \`event.preventDefault(); event.returnValue = 'foo'\` to trigger the prompt.

`;

exports[`prefer-add-event-listener > invalid(13): window.onbeforeunload = () => 'foo' 1`] = `

  1 | window.onbeforeunload = () => 'foo'

`;

exports[`prefer-add-event-listener > invalid(13): window.onbeforeunload = () => 'foo' 2`] = `

Message:
> 1 | window.onbeforeunload = () => 'foo'
    |        ^^^^^^^^^^^^^^ Prefer \`addEventListener\` over \`onbeforeunload\`. Use \`event.preventDefault(); event.returnValue = 'foo'\` to trigger the prompt.

`;

exports[`prefer-add-event-listener > invalid(14): window.onbeforeunload = () => {\n\treturn bar;\n} 1`] = `

  1 | window.onbeforeunload = () => {
  2 | 	return bar;
  3 | }

`;

exports[`prefer-add-event-listener > invalid(14): window.onbeforeunload = () => {\n\treturn bar;\n} 2`] = `

Message:
> 1 | window.onbeforeunload = () => {
    |        ^^^^^^^^^^^^^^ Prefer \`addEventListener\` over \`onbeforeunload\`. Use \`event.preventDefault(); event.returnValue = 'foo'\` to trigger the prompt.
  2 | 	return bar;
  3 | }

`;

exports[`prefer-add-event-listener > invalid(15): window.onbeforeunload = function () {\n\treturn 'bar';\n} 1`] = `

  1 | window.onbeforeunload = function () {
  2 | 	return 'bar';
  3 | }

`;

exports[`prefer-add-event-listener > invalid(15): window.onbeforeunload = function () {\n\treturn 'bar';\n} 2`] = `

Message:
> 1 | window.onbeforeunload = function () {
    |        ^^^^^^^^^^^^^^ Prefer \`addEventListener\` over \`onbeforeunload\`. Use \`event.preventDefault(); event.returnValue = 'foo'\` to trigger the prompt.
  2 | 	return 'bar';
  3 | }

`;

exports[`prefer-add-event-listener > invalid(16): window.onbeforeunload = function () {\n\treturn;\n} 1`] = `

  1 | window.onbeforeunload = function () {
  2 | 	return;
  3 | }

`;

exports[`prefer-add-event-listener > invalid(16): window.onbeforeunload = function () {\n\treturn;\n} 2`] = `

Message:
> 1 | window.onbeforeunload = function () {
    |        ^^^^^^^^^^^^^^ Prefer \`addEventListener\` over \`onbeforeunload\`.
  2 | 	return;
  3 | }

Output:
  1 | window.addEventListener('beforeunload', function () {
  2 | 	return;
  3 | })

`;

exports[`prefer-add-event-listener > invalid(17): window.onbeforeunload = function () {\n\t(() => {\n\t\treturn 'foo';\n\t})();\n} 1`] = `

  1 | window.onbeforeunload = function () {
  2 | 	(() => {
  3 | 		return 'foo';
  4 | 	})();
  5 | }

`;

exports[`prefer-add-event-listener > invalid(17): window.onbeforeunload = function () {\n\t(() => {\n\t\treturn 'foo';\n\t})();\n} 2`] = `

Message:
> 1 | window.onbeforeunload = function () {
    |        ^^^^^^^^^^^^^^ Prefer \`addEventListener\` over \`onbeforeunload\`.
  2 | 	(() => {
  3 | 		return 'foo';
  4 | 	})();
  5 | }

Output:
  1 | window.addEventListener('beforeunload', function () {
  2 | 	(() => {
  3 | 		return 'foo';
  4 | 	})();
  5 | })

`;

exports[`prefer-add-event-listener > invalid(18): window.onbeforeunload = e => {\n\tconsole.log(e);\n} 1`] = `

  1 | window.onbeforeunload = e => {
  2 | 	console.log(e);
  3 | }

`;

exports[`prefer-add-event-listener > invalid(18): window.onbeforeunload = e => {\n\tconsole.log(e);\n} 2`] = `

Message:
> 1 | window.onbeforeunload = e => {
    |        ^^^^^^^^^^^^^^ Prefer \`addEventListener\` over \`onbeforeunload\`.
  2 | 	console.log(e);
  3 | }

Output:
  1 | window.addEventListener('beforeunload', e => {
  2 | 	console.log(e);
  3 | })

`;

exports[`prefer-add-event-listener > invalid(19): const foo = require('foo');\n\nfoo.onerror = () => {}; 1`] = `

  1 | const foo = require('foo');
  2 |
  3 | foo.onerror = () => {};

`;

exports[`prefer-add-event-listener > invalid(19): const foo = require('foo');\n\nfoo.onerror = () => {}; 2`] = `

Message:
  1 | const foo = require('foo');
  2 |
> 3 | foo.onerror = () => {};
    |     ^^^^^^^ Prefer \`addEventListener\` over \`onerror\`. Note that there is difference between \`{window,element}.onerror\` and \`{window,element}.addEventListener('error')\`.

`;

exports[`prefer-add-event-listener > invalid(2): foo.onclick = 1 1`] = `

  1 | foo.onclick = 1

`;

exports[`prefer-add-event-listener > invalid(2): foo.onclick = 1 2`] = `

Message:
> 1 | foo.onclick = 1
    |     ^^^^^^^ Prefer \`addEventListener\` over \`onclick\`.

`;

exports[`prefer-add-event-listener > invalid(20): import foo from 'foo';\n\nfoo.onerror = () => {}; 1`] = `

  1 | import foo from 'foo';
  2 |
  3 | foo.onerror = () => {};

`;

exports[`prefer-add-event-listener > invalid(20): import foo from 'foo';\n\nfoo.onerror = () => {}; 2`] = `

Message:
  1 | import foo from 'foo';
  2 |
> 3 | foo.onerror = () => {};
    |     ^^^^^^^ Prefer \`addEventListener\` over \`onerror\`. Note that there is difference between \`{window,element}.onerror\` and \`{window,element}.addEventListener('error')\`.

`;

exports[`prefer-add-event-listener > invalid(21): foo.onerror = () => {};\n\nfunction bar() {\n\tconst koa = require('koa');\n\n\tkoa.onerror = () => {};\n} 1`] = `

  1 | foo.onerror = () => {};
  2 |
  3 | function bar() {
  4 | 	const koa = require('koa');
  5 |
  6 | 	koa.onerror = () => {};
  7 | }

`;

exports[`prefer-add-event-listener > invalid(21): foo.onerror = () => {};\n\nfunction bar() {\n\tconst koa = require('koa');\n\n\tkoa.onerror = () => {};\n} 2`] = `

Message:
> 1 | foo.onerror = () => {};
    |     ^^^^^^^ Prefer \`addEventListener\` over \`onerror\`. Note that there is difference between \`{window,element}.onerror\` and \`{window,element}.addEventListener('error')\`.
  2 |
  3 | function bar() {
  4 | 	const koa = require('koa');
  5 |
  6 | 	koa.onerror = () => {};
  7 | }

`;

exports[`prefer-add-event-listener > invalid(22): const Koa = require('koa');\nconst app = new Koa();\n\napp.onerror = () => {}; 1`] = `

Options:
- excludedPackages:
    - 'foo'

Code:
  1 | const Koa = require('koa');
  2 | const app = new Koa();
  3 |
  4 | app.onerror = () => {};

`;

exports[`prefer-add-event-listener > invalid(22): const Koa = require('koa');\nconst app = new Koa();\n\napp.onerror = () => {}; 2`] = `

Message:
  1 | const Koa = require('koa');
  2 | const app = new Koa();
  3 |
> 4 | app.onerror = () => {};
    |     ^^^^^^^ Prefer \`addEventListener\` over \`onerror\`. Note that there is difference between \`{window,element}.onerror\` and \`{window,element}.addEventListener('error')\`.

`;

exports[`prefer-add-event-listener > invalid(23): import {Koa as Foo} from 'koa';\nconst app = new Foo();\n\napp.onerror = () => {}; 1`] = `

Options:
- excludedPackages:
    - 'foo'

Code:
  1 | import {Koa as Foo} from 'koa';
  2 | const app = new Foo();
  3 |
  4 | app.onerror = () => {};

`;

exports[`prefer-add-event-listener > invalid(23): import {Koa as Foo} from 'koa';\nconst app = new Foo();\n\napp.onerror = () => {}; 2`] = `

Message:
  1 | import {Koa as Foo} from 'koa';
  2 | const app = new Foo();
  3 |
> 4 | app.onerror = () => {};
    |     ^^^^^^^ Prefer \`addEventListener\` over \`onerror\`. Note that there is difference between \`{window,element}.onerror\` and \`{window,element}.addEventListener('error')\`.

`;

exports[`prefer-add-event-listener > invalid(24): const sax = require('sax');\nconst parser = sax.parser();\n\nparser.onerror = () => {}; 1`] = `

Options:
- excludedPackages:
    - 'foo'

Code:
  1 | const sax = require('sax');
  2 | const parser = sax.parser();
  3 |
  4 | parser.onerror = () => {};

`;

exports[`prefer-add-event-listener > invalid(24): const sax = require('sax');\nconst parser = sax.parser();\n\nparser.onerror = () => {}; 2`] = `

Message:
  1 | const sax = require('sax');
  2 | const parser = sax.parser();
  3 |
> 4 | parser.onerror = () => {};
    |        ^^^^^^^ Prefer \`addEventListener\` over \`onerror\`. Note that there is difference between \`{window,element}.onerror\` and \`{window,element}.addEventListener('error')\`.

`;

exports[`prefer-add-event-listener > invalid(25): myWorker.port.onmessage = function(e) {} 1`] = `

  1 | myWorker.port.onmessage = function(e) {}

`;

exports[`prefer-add-event-listener > invalid(25): myWorker.port.onmessage = function(e) {} 2`] = `

Message:
> 1 | myWorker.port.onmessage = function(e) {}
    |               ^^^^^^^^^ Prefer \`addEventListener\` over \`onmessage\`. Note that there is difference between \`SharedWorker#onmessage\` and \`SharedWorker#addEventListener('message')\`.

`;

exports[`prefer-add-event-listener > invalid(26): ((foo)).onclick = ((0, listener)) 1`] = `

  1 | ((foo)).onclick = ((0, listener))

`;

exports[`prefer-add-event-listener > invalid(26): ((foo)).onclick = ((0, listener)) 2`] = `

Message:
> 1 | ((foo)).onclick = ((0, listener))
    |         ^^^^^^^ Prefer \`addEventListener\` over \`onclick\`.

Output:
  1 | (foo).addEventListener('click', (0, listener))

`;

exports[`prefer-add-event-listener > invalid(27): window.onload = window.onunload = function() {}; 1`] = `

  1 | window.onload = window.onunload = function() {};

`;

exports[`prefer-add-event-listener > invalid(27): window.onload = window.onunload = function() {}; 2`] = `

Message:
> 1 | window.onload = window.onunload = function() {};
    |        ^^^^^^ Prefer \`addEventListener\` over \`onload\`.

`;

exports[`prefer-add-event-listener > invalid(27): window.onload = window.onunload = function() {}; 3`] = `

Message:
> 1 | window.onload = window.onunload = function() {};
    |                        ^^^^^^^^ Prefer \`addEventListener\` over \`onunload\`.

`;

exports[`prefer-add-event-listener > invalid(28): window.onunload ??= function() {}; 1`] = `

  1 | window.onunload ??= function() {};

`;

exports[`prefer-add-event-listener > invalid(28): window.onunload ??= function() {}; 2`] = `

Message:
> 1 | window.onunload ??= function() {};
    |        ^^^^^^^^ Prefer \`addEventListener\` over \`onunload\`.

`;

exports[`prefer-add-event-listener > invalid(29): window.onunload ||= function() {}; 1`] = `

  1 | window.onunload ||= function() {};

`;

exports[`prefer-add-event-listener > invalid(29): window.onunload ||= function() {}; 2`] = `

Message:
> 1 | window.onunload ||= function() {};
    |        ^^^^^^^^ Prefer \`addEventListener\` over \`onunload\`.

`;

exports[`prefer-add-event-listener > invalid(3): foo.bar.onclick = onClick 1`] = `

  1 | foo.bar.onclick = onClick

`;

exports[`prefer-add-event-listener > invalid(3): foo.bar.onclick = onClick 2`] = `

Message:
> 1 | foo.bar.onclick = onClick
    |         ^^^^^^^ Prefer \`addEventListener\` over \`onclick\`.

Output:
  1 | foo.bar.addEventListener('click', onClick)

`;

exports[`prefer-add-event-listener > invalid(30): window.onunload += function() {}; 1`] = `

  1 | window.onunload += function() {};

`;

exports[`prefer-add-event-listener > invalid(30): window.onunload += function() {}; 2`] = `

Message:
> 1 | window.onunload += function() {};
    |        ^^^^^^^^ Prefer \`addEventListener\` over \`onunload\`.

`;

exports[`prefer-add-event-listener > invalid(31): foo.onclick = true 1`] = `

  1 | foo.onclick = true

`;

exports[`prefer-add-event-listener > invalid(31): foo.onclick = true 2`] = `

Message:
> 1 | foo.onclick = true
    |     ^^^^^^^ Prefer \`addEventListener\` over \`onclick\`.

`;

exports[`prefer-add-event-listener > invalid(32): foo.onclick = 'bar' 1`] = `

  1 | foo.onclick = 'bar'

`;

exports[`prefer-add-event-listener > invalid(32): foo.onclick = 'bar' 2`] = `

Message:
> 1 | foo.onclick = 'bar'
    |     ^^^^^^^ Prefer \`addEventListener\` over \`onclick\`.

`;

exports[`prefer-add-event-listener > invalid(33): foo.onclick = \`bar\` 1`] = `

  1 | foo.onclick = \`bar\`

`;

exports[`prefer-add-event-listener > invalid(33): foo.onclick = \`bar\` 2`] = `

Message:
> 1 | foo.onclick = \`bar\`
    |     ^^^^^^^ Prefer \`addEventListener\` over \`onclick\`.

`;

exports[`prefer-add-event-listener > invalid(34): foo.onclick = {} 1`] = `

  1 | foo.onclick = {}

`;

exports[`prefer-add-event-listener > invalid(34): foo.onclick = {} 2`] = `

Message:
> 1 | foo.onclick = {}
    |     ^^^^^^^ Prefer \`addEventListener\` over \`onclick\`.

`;

exports[`prefer-add-event-listener > invalid(35): foo.onclick = [] 1`] = `

  1 | foo.onclick = []

`;

exports[`prefer-add-event-listener > invalid(35): foo.onclick = [] 2`] = `

Message:
> 1 | foo.onclick = []
    |     ^^^^^^^ Prefer \`addEventListener\` over \`onclick\`.

`;

exports[`prefer-add-event-listener > invalid(36): foo.onclick = new Handler() 1`] = `

  1 | foo.onclick = new Handler()

`;

exports[`prefer-add-event-listener > invalid(36): foo.onclick = new Handler() 2`] = `

Message:
> 1 | foo.onclick = new Handler()
    |     ^^^^^^^ Prefer \`addEventListener\` over \`onclick\`.

`;

exports[`prefer-add-event-listener > invalid(4): const bar = null; foo.onclick = bar; 1`] = `

  1 | const bar = null; foo.onclick = bar;

`;

exports[`prefer-add-event-listener > invalid(4): const bar = null; foo.onclick = bar; 2`] = `

Message:
> 1 | const bar = null; foo.onclick = bar;
    |                       ^^^^^^^ Prefer \`addEventListener\` over \`onclick\`.

Output:
  1 | const bar = null; foo.addEventListener('click', bar);

`;

exports[`prefer-add-event-listener > invalid(5): foo.onkeydown = () => {} 1`] = `

  1 | foo.onkeydown = () => {}

`;

exports[`prefer-add-event-listener > invalid(5): foo.onkeydown = () => {} 2`] = `

Message:
> 1 | foo.onkeydown = () => {}
    |     ^^^^^^^^^ Prefer \`addEventListener\` over \`onkeydown\`.

Output:
  1 | foo.addEventListener('keydown', () => {})

`;

exports[`prefer-add-event-listener > invalid(6): foo.ondragend = () => {} 1`] = `

  1 | foo.ondragend = () => {}

`;

exports[`prefer-add-event-listener > invalid(6): foo.ondragend = () => {} 2`] = `

Message:
> 1 | foo.ondragend = () => {}
    |     ^^^^^^^^^ Prefer \`addEventListener\` over \`ondragend\`.

Output:
  1 | foo.addEventListener('dragend', () => {})

`;

exports[`prefer-add-event-listener > invalid(7): foo.onclick = function (e) {\n\tconsole.log(e);\n} 1`] = `

  1 | foo.onclick = function (e) {
  2 | 	console.log(e);
  3 | }

`;

exports[`prefer-add-event-listener > invalid(7): foo.onclick = function (e) {\n\tconsole.log(e);\n} 2`] = `

Message:
> 1 | foo.onclick = function (e) {
    |     ^^^^^^^ Prefer \`addEventListener\` over \`onclick\`.
  2 | 	console.log(e);
  3 | }

Output:
  1 | foo.addEventListener('click', function (e) {
  2 | 	console.log(e);
  3 | })

`;

exports[`prefer-add-event-listener > invalid(8): foo.onclick = null 1`] = `

  1 | foo.onclick = null

`;

exports[`prefer-add-event-listener > invalid(8): foo.onclick = null 2`] = `

Message:
> 1 | foo.onclick = null
    |     ^^^^^^^ Prefer \`removeEventListener\` over \`onclick\`.

`;

exports[`prefer-add-event-listener > invalid(9): foo.onclick = undefined 1`] = `

  1 | foo.onclick = undefined

`;

exports[`prefer-add-event-listener > invalid(9): foo.onclick = undefined 2`] = `

Message:
> 1 | foo.onclick = undefined
    |     ^^^^^^^ Prefer \`removeEventListener\` over \`onclick\`.

`;
